--- a/app/src/main/res/layout/layout_custom_videoview.xml
+++ b/app/src/main/res/layout/layout_custom_videoview.xml
@@ -11,7 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerInParent="true"
-        app:uvv_autoRotation="true" />
+        app:hv_autoRotation="true" />
 
     <ImageView
         android:id="@+id/pre_on_uv_img"
