--- a/app/src/main/res/layout/a_acustom_video_act.xml
+++ b/app/src/main/res/layout/a_acustom_video_act.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/video_layout"
@@ -18,6 +18,7 @@
             android:layout_gravity="center"
             app:hv_autoRotation="true"
             app:hv_fitXY="false" />
+
         <ImageView
             android:id="@+id/pre_on_uv_img"
             android:layout_width="match_parent"
@@ -33,15 +34,21 @@
 
     </FrameLayout>
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="设置播放路径"
-        android:id="@+id/btn_set_path" />
+        android:id="@+id/ll_bottom">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="设置错误播放路径"
-        android:id="@+id/btn_set_err_path" />
+        <Button
+            android:id="@+id/btn_set_path"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设置播放路径" />
+
+        <Button
+            android:id="@+id/btn_set_err_path"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设置错误播放路径" />
+    </LinearLayout>
 </LinearLayout>
