--- a/hymvideoview/src/main/res/values/hym_videoview_attrs.xml
+++ b/hymvideoview/src/main/res/values/hym_videoview_attrs.xml
@@ -9,6 +9,7 @@
     <declare-styleable name="HymVideoView">
         <attr name="hv_fitXY" format="boolean" />
         <attr name="hv_autoRotation" format="boolean" />
+        <attr name="hv_fullScreen_direction" format="boolean" />
     </declare-styleable>
 
 </resources>
