修复视频播放相关的异常问题

--- a/app/src/main/res/layout/a_acustom_video_act.xml
+++ b/app/src/main/res/layout/a_acustom_video_act.xml
@@ -5,39 +5,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/video_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="200dp"
-        android:background="@android:color/black">
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:background="@android:color/black"
+        >
 
-        <com.hym.hymvideoview.HymVideoView
+        <com.hym.hymvideoview.CustomVideoView
             android:id="@+id/cvv_video"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
-            app:hv_autoRotation="true"
-            app:hv_fitXY="false" />
-
-        <ImageView
-            android:id="@+id/pre_on_uv_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:scaleType="fitXY" />
+            android:layout_gravity="center"
+           />
 
-        <com.hym.hymvideoview.HymMediaController
-            android:id="@+id/media_controller"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            app:hv_scalable="true" />
-
-    </FrameLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ll_bottom">
+        android:id="@+id/ll_bottom"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btn_set_path"
@@ -50,5 +39,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="设置错误播放路径" />
+        <FrameLayout
+            android:id="@+id/video_layout_2"
+            android:layout_width="fill_parent"
+            android:layout_height="200dp"
+            android:background="@android:color/black"
+            >
+
+            <com.hym.hymvideoview.CustomVideoView
+                android:id="@+id/cvv_video_2"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                />
+
+        </FrameLayout>
     </LinearLayout>
 </LinearLayout>
