--- a/hymvideoview/src/main/res/layout/hv_player_controller.xml
+++ b/hymvideoview/src/main/res/layout/hv_player_controller.xml
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
-        android:background="@color/hv_titlebar_bg"
+        android:background="#00000000"
         android:orientation="horizontal">
 
         <ImageButton
@@ -72,7 +72,7 @@
         android:contentDescription="@null"
         android:scaleType="fitXY"
         android:src="@mipmap/hv_itv_player_play"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <RelativeLayout
         android:id="@+id/control_layout"
