--- a/hymvideoview/src/main/res/layout/hv_on_error_layout.xml
+++ b/hymvideoview/src/main/res/layout/hv_on_error_layout.xml
@@ -3,12 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#00198989">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/hv_on_error" />
+        android:src="@mipmap/hv_on_error_refresh" />
 
     <TextView
         android:id="@+id/error_text"
