修复中间按钮的播放状态和底部控制栏状态的显示不正确 添加了底部单独进度条的显示功能

--- a/hymvideoview/src/main/res/layout/layout_custom_videoview_m.xml
+++ b/hymvideoview/src/main/res/layout/layout_custom_videoview_m.xml
@@ -28,7 +28,7 @@
         android:layout_height="5dp"
        android:layout_gravity="bottom"
         android:layout_marginBottom="0dp"
-        android:visibility="visible" />
+        android:visibility="gone" />
     <com.hym.hymvideoview.HymMediaController
         android:id="@+id/media_controller"
         android:layout_width="fill_parent"
