--- a/hymvideoview/src/main/res/layout/hv_on_error_layout.xml
+++ b/hymvideoview/src/main/res/layout/hv_on_error_layout.xml
@@ -4,8 +4,10 @@
     android:layout_height="fill_parent">
 <ImageView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_centerInParent="true"
     android:id="@+id/error_img_bg"
+    android:scaleType="fitCenter"
    />
     <LinearLayout
         android:layout_width="fill_parent"
