--- a/hymvideoview/src/main/res/layout/layout_custom_videoview_m.xml
+++ b/hymvideoview/src/main/res/layout/layout_custom_videoview_m.xml
@@ -18,8 +18,9 @@
         android:id="@+id/hv_pre_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:scaleType="fitCenter" />
+        android:layout_gravity="center"
+        android:scaleType="fitCenter"
+         />
     <ProgressBar
         android:id="@+id/pb_play"
         style="@style/st_pro_horizontal_goddessvideo"
